#116 Meal DB 컬럼 관리 변경
- Meal에 대해서 1~6으로 분리되어있던 방식을 Meals로 한 컬럼에서 관리합니다.